Update CompanyServiceImpTest.java